tz_datetime_windows/lib/src/icu_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for ICU (Windows)
class IcuBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  IcuBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  IcuBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  ffi.Pointer<UCalendar> ucal_open(
    ffi.Pointer<UChar> zoneID,
    int len,
    ffi.Pointer<ffi.Char> locale,
    int type,
    ffi.Pointer<UErrorCode> status,
  ) {
    return _ucal_open(zoneID, len, locale, type, status);
  }

  late final _ucal_openPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<UCalendar> Function(
            ffi.Pointer<UChar>,
            ffi.Int32,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Pointer<UErrorCode>,
          )
        >
      >('ucal_open');
  late final _ucal_open = _ucal_openPtr
      .asFunction<
        ffi.Pointer<UCalendar> Function(
          ffi.Pointer<UChar>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<UErrorCode>,
        )
      >();

  void ucal_close(ffi.Pointer<UCalendar> cal) {
    return _ucal_close(cal);
  }

  late final _ucal_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<UCalendar>)>>(
        'ucal_close',
      );
  late final _ucal_close = _ucal_closePtr
      .asFunction<void Function(ffi.Pointer<UCalendar>)>();

  void ucal_setMillis(
    ffi.Pointer<UCalendar> cal,
    double date,
    ffi.Pointer<UErrorCode> status,
  ) {
    return _ucal_setMillis(cal, date, status);
  }

  late final _ucal_setMillisPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<UCalendar>,
            UDate,
            ffi.Pointer<UErrorCode>,
          )
        >
      >('ucal_setMillis');
  late final _ucal_setMillis = _ucal_setMillisPtr
      .asFunction<
        void Function(ffi.Pointer<UCalendar>, double, ffi.Pointer<UErrorCode>)
      >();

  int ucal_get(
    ffi.Pointer<UCalendar> cal,
    int field,
    ffi.Pointer<UErrorCode> status,
  ) {
    return _ucal_get(cal, field, status);
  }

  late final _ucal_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<UCalendar>,
            ffi.Int32,
            ffi.Pointer<UErrorCode>,
          )
        >
      >('ucal_get');
  late final _ucal_get = _ucal_getPtr
      .asFunction<
        int Function(ffi.Pointer<UCalendar>, int, ffi.Pointer<UErrorCode>)
      >();

  int ucal_getTimeZoneTransitionDate(
    ffi.Pointer<UCalendar> cal,
    int type,
    ffi.Pointer<UDate> transition,
    ffi.Pointer<UErrorCode> status,
  ) {
    return _ucal_getTimeZoneTransitionDate(cal, type, transition, status);
  }

  late final _ucal_getTimeZoneTransitionDatePtr =
      _lookup<
        ffi.NativeFunction<
          UBool Function(
            ffi.Pointer<UCalendar>,
            ffi.Int32,
            ffi.Pointer<UDate>,
            ffi.Pointer<UErrorCode>,
          )
        >
      >('ucal_getTimeZoneTransitionDate');
  late final _ucal_getTimeZoneTransitionDate =
      _ucal_getTimeZoneTransitionDatePtr
          .asFunction<
            int Function(
              ffi.Pointer<UCalendar>,
              int,
              ffi.Pointer<UDate>,
              ffi.Pointer<UErrorCode>,
            )
          >();

  ffi.Pointer<UEnumeration> ucal_openTimeZones(ffi.Pointer<UErrorCode> ec) {
    return _ucal_openTimeZones(ec);
  }

  late final _ucal_openTimeZonesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<UEnumeration> Function(ffi.Pointer<UErrorCode>)
        >
      >('ucal_openTimeZones');
  late final _ucal_openTimeZones = _ucal_openTimeZonesPtr
      .asFunction<
        ffi.Pointer<UEnumeration> Function(ffi.Pointer<UErrorCode>)
      >();

  int uenum_count(
    ffi.Pointer<UEnumeration> en,
    ffi.Pointer<UErrorCode> status,
  ) {
    return _uenum_count(en, status);
  }

  late final _uenum_countPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<UEnumeration>, ffi.Pointer<UErrorCode>)
        >
      >('uenum_count');
  late final _uenum_count = _uenum_countPtr
      .asFunction<
        int Function(ffi.Pointer<UEnumeration>, ffi.Pointer<UErrorCode>)
      >();

  ffi.Pointer<UChar> uenum_unext(
    ffi.Pointer<UEnumeration> en,
    ffi.Pointer<ffi.Int32> resultLength,
    ffi.Pointer<UErrorCode> status,
  ) {
    return _uenum_unext(en, resultLength, status);
  }

  late final _uenum_unextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<UChar> Function(
            ffi.Pointer<UEnumeration>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<UErrorCode>,
          )
        >
      >('uenum_unext');
  late final _uenum_unext = _uenum_unextPtr
      .asFunction<
        ffi.Pointer<UChar> Function(
          ffi.Pointer<UEnumeration>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<UErrorCode>,
        )
      >();

  void uenum_close(ffi.Pointer<UEnumeration> en) {
    return _uenum_close(en);
  }

  late final _uenum_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<UEnumeration>)>>(
        'uenum_close',
      );
  late final _uenum_close = _uenum_closePtr
      .asFunction<void Function(ffi.Pointer<UEnumeration>)>();
}

typedef UChar = ffi.Uint16;
typedef DartUChar = int;
typedef UDate = ffi.Double;
typedef DartUDate = double;
typedef UBool = ffi.Int8;
typedef DartUBool = int;
typedef UErrorCode = ffi.Int32;
typedef DartUErrorCode = int;

final class UCalendar extends ffi.Opaque {}

final class UEnumeration extends ffi.Opaque {}
